# TDD_GTest

./: CMakeLists.txt  ReadMe.md
src/: MyClass.cpp  MyClass.h
test/: test_MyClass.cpp
